[package]
name = "ptsim"
version = "0.1.0"
authors = ["Andrew Holliday <lommmzar@gmail.com>"]
edition = "2018"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
rust_public_transit_sim = { path = "rust_public_transit_sim" }
numpy="0.13"

[dependencies.pyo3]
version="0.13"
features=["extension-module"]